log.txt
src/search_algorithm.ts(33,32): error TS2448: Block-scoped variable 'getExtracts' used before its declaration.
src/search_algorithm.ts(37,19): error TS2448: Block-scoped variable 'sortFunction' used before its declaration.
module.js:471
    throw err;
    ^

Error: Cannot find module 'sql.js'
    at Function.Module._resolveFilename (module.js:469:15)
    at Function.Module._load (module.js:417:25)
    at Module.require (module.js:497:17)
    at require (internal/module.js:20:19)
    at Object.<anonymous> (/home/cs/ConceptSearch/server/src/db_communication.js:2:11)
    at Module._compile (module.js:570:32)
    at Object.Module._extensions..js (module.js:579:10)
    at Module.load (module.js:487:32)
    at tryModuleLoad (module.js:446:12)
    at Function.Module._load (module.js:438:3)
